backend/base/db/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: blog
  labels:
    app: db
spec:
  serviceName: db-service
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
        vault-access: postgres
    annotations:
      vault.hashicorp.com/agent-inject: "true"
      vault.hashicorp.com/auth-path: "auth/blog-post-kubernetes"
      vault.hashicorp.com/agent-inject-token-audience: "vault"
    spec:
      serviceAccountName: blog-postgres
      containers:
        - name: postgres
          image: postgres:18
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432

          volumeMounts:
           - name: postgres-data
             mountPath: /var/lib/postgresql

          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - pg_isready -U "$(cat /vault/secrets/postgres-user)" -d "$(cat /vault/secrets/postgres-database)"
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 6

          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - pg_isready -U "$(cat /vault/secrets/postgres-user)" -d "$(cat /vault/secrets/postgres-database)"
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 6

      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: db-pvc
